--- a/TradeMaster6000/Client/Pages/CandleMagic.razor
+++ b/TradeMaster6000/Client/Pages/CandleMagic.razor
@@ -11,9 +11,9 @@
 
     if (IsConnected)
     {
-        <RadzenButton ButtonStyle="ButtonStyle.Primary" Click="@StartCandleMagic" Text="Start magic" />
-        <RadzenButton ButtonStyle="ButtonStyle.Primary" Click="@StopCandleMagic" Text="Stop magic" />
-        <RadzenButton ButtonStyle="ButtonStyle.Primary" Click="@LoadExcelCandles" Text="Load Excel Candles" />
+        <RadzenButton Style="margin-bottom:5px;" ButtonStyle="ButtonStyle.Primary" Click="@StartCandleMagic" Text="Start magic" />
+        <RadzenButton Style="margin-bottom:5px;" ButtonStyle="ButtonStyle.Primary" Click="@StopCandleMagic" Text="Stop magic" />
+        <RadzenButton Style="margin-bottom:5px;" ButtonStyle="ButtonStyle.Primary" Click="@LoadExcelCandles" Text="Load Excel Candles" />
 
         <hr />
 
@@ -23,7 +23,7 @@
 
         <hr />
 
-        <RadzenDataGrid @ref="candlesGrid" AllowFiltering="true" AllowPaging="true" PageSize="10" AllowSorting="true"
+        <RadzenDataGrid Style="z-index:0;" @ref="candlesGrid" AllowFiltering="true" AllowPaging="true" PageSize="10" AllowSorting="true"
                         Data="@candles" TItem="Candle">
             <Columns>
                 <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Open" Title="Open" />
@@ -36,6 +36,7 @@
             </Columns>
         </RadzenDataGrid>
 
+        <hr />
     }
     else
     {
