--- a/TradeMaster6000/Client/Pages/OrderHistory.razor
+++ b/TradeMaster6000/Client/Pages/OrderHistory.razor
@@ -11,7 +11,7 @@
     {
         <div class="row">
             <div class="col-lg-12">
-                <RadzenDataGrid @ref="ordersGrid" AllowFiltering="true" AllowPaging="true" PageSize="10" AllowSorting="true"
+                <RadzenDataGrid Style="z-index:0;" @ref="ordersGrid" AllowFiltering="true" AllowPaging="true" PageSize="10" AllowSorting="true"
                                 Data="@orders" TItem="TradeOrder">
                     <Columns>
                         <RadzenDataGridColumn Width="100px" TItem="TradeOrder" Property="Id" Title="Id" Filterable="false" Sortable="false" TextAlign="TextAlign.Center">
@@ -26,13 +26,15 @@
                         <RadzenDataGridColumn Width="100px" TItem="TradeOrder" Property="Status" Title="Status" />
                     </Columns>
                 </RadzenDataGrid>
+
             </div>
         </div>
     }
-            else
-            {
-                <h3>Connecting...</h3>
-            }
+    else
+    {
+        <h3>Connecting...</h3>
+    }
+    <hr />
 }
 
 
