--- a/TradeMaster6000/Client/Pages/TickerLogs.razor
+++ b/TradeMaster6000/Client/Pages/TickerLogs.razor
@@ -11,7 +11,7 @@
     {
         <div class="row">
             <div class="col-lg-12">
-                <RadzenDataGrid @ref="logsGrid" AllowFiltering="false" AllowPaging="true" PageSize="20" AllowSorting="false"
+                <RadzenDataGrid Style="z-index:0;" @ref="logsGrid" AllowFiltering="false" AllowPaging="true" PageSize="20" AllowSorting="false"
                                 Data="@logs" TItem="SomeLog">
                     <Columns>
                         <RadzenDataGridColumn Width="300px" TItem="SomeLog" Property="Log" Title="Log" />
@@ -26,6 +26,7 @@
     {
         <h3>Connecting...</h3>
     }
+    <hr />
 }
 
 @code {
