--- a/TradeMaster6000/Client/Shared/NavMenu.razor
+++ b/TradeMaster6000/Client/Shared/NavMenu.razor
@@ -38,12 +38,16 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Zone Service
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="hangfire">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Hangfire
+            </NavLink>
+        </li>
         <AuthorizeView>
             <Authorized>
-                <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="hangfire">
-                        <span class="oi oi-list-rich" aria-hidden="true"></span> Hangfire
-                    </NavLink>
+
+                <li class="nav-item fixed-bottom">
+                    <ApiLoginDisplay />
                 </li>
             </Authorized>
         </AuthorizeView>
