--- a/TradeMaster6000/Client/Pages/ZoneService.razor
+++ b/TradeMaster6000/Client/Pages/ZoneService.razor
@@ -20,6 +20,7 @@
                 <RadzenDataGridColumn Width="100px" TItem="Zone" Property="InstrumentSymbol" Title="Instrument Symbol" />
                 <RadzenDataGridColumn Width="100px" TItem="Zone" Property="Top" Title="Top" />
                 <RadzenDataGridColumn Width="100px" TItem="Zone" Property="Bottom" Title="Bottom" />
+                <RadzenDataGridColumn Width="100px" TItem="Zone" Property="ZoneType" Title="Zone type" />
                 <RadzenDataGridColumn Width="100px" TItem="Zone" Property="From" Title="From" />
                 <RadzenDataGridColumn Width="100px" TItem="Zone" Property="To" Title="To" />
             </Columns>
