--- a/TradeMaster6000/Client/Pages/Index.razor
+++ b/TradeMaster6000/Client/Pages/Index.razor
@@ -4,6 +4,11 @@
 
 <br />
 
+<h3>Give away control and you will have it.</h3>
+<h3>― Alan Watts</h3>
+
+<br />
+
 <h3>You are in danger of living a life so comfortable and soft,</h3>
 <h3>that you will die without ever realizing your true potential.</h3>
 <h3>― David Goggins</h3>
