--- a/TradeMaster6000/Client/Shared/NavMenu.razor
+++ b/TradeMaster6000/Client/Shared/NavMenu.razor
@@ -9,15 +9,15 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="orders">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Orders
+            <NavLink class="nav-link" href="trader">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Trader
             </NavLink>
         </li>
-        <li class="nav-item px-3">
+        @*<li class="nav-item px-3">
             <NavLink class="nav-link" href="createorder">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Create order
             </NavLink>
-        </li>
+        </li>*@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="orderhistory">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Order history
@@ -28,7 +28,7 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Ticker logs
             </NavLink>
         </li>
-        <li class="nav-item px-3">
+        @*<li class="nav-item px-3">
             <NavLink class="nav-link" href="candlemagic">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Candle Magic
             </NavLink>
@@ -37,7 +37,7 @@
             <NavLink class="nav-link" href="zoneservice">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Zone Service
             </NavLink>
-        </li>
+        </li>*@
 
         <AuthorizeView>
             <Authorized>
