--- a/TradeMaster6000/Client/Shared/NavMenu.razor
+++ b/TradeMaster6000/Client/Shared/NavMenu.razor
@@ -13,11 +13,21 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Trader
             </NavLink>
         </li>
-        @*<li class="nav-item px-3">
-            <NavLink class="nav-link" href="createorder">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Create order
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="orders">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Orders
             </NavLink>
-        </li>*@
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="candlemagic">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Candles
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="zoneservice">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Zones
+            </NavLink>
+        </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="orderhistory">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Order history
@@ -28,16 +38,6 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Ticker logs
             </NavLink>
         </li>
-        @*<li class="nav-item px-3">
-            <NavLink class="nav-link" href="candlemagic">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Candle Magic
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="zoneservice">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Zone Service
-            </NavLink>
-        </li>*@
 
         <AuthorizeView>
             <Authorized>
