--- a/TradeMaster6000/Client/Pages/ZoneService.razor
+++ b/TradeMaster6000/Client/Pages/ZoneService.razor
@@ -25,6 +25,10 @@
                 <RadzenDataGridColumn Width="100px" TItem="Zone" Property="Bottom" Title="Bottom" />
                 <RadzenDataGridColumn Width="100px" TItem="Zone" Property="ZoneType" Title="Zone type" />
                 <RadzenDataGridColumn Width="100px" TItem="Zone" Property="SupplyDemand" Title="Supply Or Demand" />
+                <RadzenDataGridColumn Width="100px" TItem="Zone" Property="Timeframe" Title="Timeframe" />
+                <RadzenDataGridColumn Width="100px" TItem="Zone" Property="Tradeable" Title="Tradeable" />
+                <RadzenDataGridColumn Width="100px" TItem="Zone" Property="Tested" Title="Tested" />
+                <RadzenDataGridColumn Width="100px" TItem="Zone" Property="Broken" Title="Broken" />
                 <RadzenDataGridColumn Width="100px" TItem="Zone" Property="From" Title="From" />
                 <RadzenDataGridColumn Width="100px" TItem="Zone" Property="To" Title="To" />
                 <RadzenDataGridColumn Width="100px" TItem="Zone" Property="Created" Title="Created" />
