--- a/TradeMaster6000/Client/Pages/CandleMagic.razor
+++ b/TradeMaster6000/Client/Pages/CandleMagic.razor
@@ -12,8 +12,8 @@
     if (IsConnected)
     {
         @*<RadzenButton Style="margin-bottom:5px;" ButtonStyle="ButtonStyle.Primary" Click="@StartCandleMagic" Text="Start magic" />
-        <RadzenButton Style="margin-bottom:5px;" ButtonStyle="ButtonStyle.Primary" Click="@StopCandleMagic" Text="Stop magic" />
-        <RadzenButton Style="margin-bottom:5px;" ButtonStyle="ButtonStyle.Primary" Click="@LoadExcelCandles" Text="Load Excel Candles" />*@
+        <RadzenButton Style="margin-bottom:5px;" ButtonStyle="ButtonStyle.Primary" Click="@StopCandleMagic" Text="Stop magic" />*@
+        <RadzenButton Style="margin-bottom:5px;" ButtonStyle="ButtonStyle.Primary" Click="@LoadExcelCandles" Text="Load Excel Candles" />
 
         <hr />
 
