--- a/TradeMaster6000/Client/Pages/ZoneService.razor
+++ b/TradeMaster6000/Client/Pages/ZoneService.razor
@@ -10,6 +10,7 @@
 @{
     if (IsConnected)
     {
+        <RadzenButton ButtonStyle="ButtonStyle.Primary" Click=@(() => StartZoneService()) Text="Start" />
 
         <hr />
 
