--- a/TradeMaster6000/Client/Pages/CandleMagic.razor
+++ b/TradeMaster6000/Client/Pages/CandleMagic.razor
@@ -12,8 +12,9 @@
     if (IsConnected)
     {
         @*<RadzenButton Style="margin-bottom:5px;" ButtonStyle="ButtonStyle.Primary" Click="@StartCandleMagic" Text="Start magic" />
-        <RadzenButton Style="margin-bottom:5px;" ButtonStyle="ButtonStyle.Primary" Click="@StopCandleMagic" Text="Stop magic" />*@
+            <RadzenButton Style="margin-bottom:5px;" ButtonStyle="ButtonStyle.Primary" Click="@StopCandleMagic" Text="Stop magic" />*@
         <RadzenButton Style="margin-bottom:5px;" ButtonStyle="ButtonStyle.Primary" Click="@LoadExcelCandles" Text="Load Excel Candles" />
+        <RadzenButton Style="margin-bottom:5px;" ButtonStyle="ButtonStyle.Primary" Click="@MarkCandlesUnused" Text="Mark all candles unused" />
 
         <hr />
 
@@ -93,6 +94,11 @@
     private async Task LoadExcelCandles()
     {
         await hubConnection.SendAsync("LoadExcelCandles");
+    }
+
+    private async Task MarkCandlesUnused()
+    {
+        await hubConnection.SendAsync("MarkCandlesUnused");
     }
 
     private async Task StopCandleMagic()
