--- a/TradeMaster6000/Client/Pages/CandleMagic.razor
+++ b/TradeMaster6000/Client/Pages/CandleMagic.razor
@@ -31,9 +31,10 @@
                 <RadzenDataGridColumn Width="100px" TItem="Candle" Property="High" Title="High" />
                 <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Low" Title="Low" />
                 <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Close" Title="Close" />
-                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Timestamp" Title="Timestamp" />
+                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Timeframe" Title="Timeframe" />
+                <RadzenDataGridColumn Width="200px" TItem="Candle" Property="Timestamp" Title="Timestamp" />
                 <RadzenDataGridColumn Width="100px" TItem="Candle" Property="TicksCount" Title="Ticks Count" />
-                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Kill" Title="Kill" />
+                <RadzenDataGridColumn Width="200px" TItem="Candle" Property="Kill" Title="Kill" />
             </Columns>
         </RadzenDataGrid>
 
