--- a/TradeMaster6000/Client/Pages/Index.razor
+++ b/TradeMaster6000/Client/Pages/Index.razor
@@ -4,107 +4,7 @@
 
 <br />
 
-<h3>Give away control and you will have it.</h3>
-<h3>― Alan Watts</h3>
-
-<br />
-
-<h3>You are in danger of living a life so comfortable and soft,</h3>
-<h3>that you will die without ever realizing your true potential.</h3>
-<h3>― David Goggins</h3>
-
-<br />
-
-<h3>In the military we always say we don’t rise to the level of our expectations,</h3>
-<h3>we fall to the level of our training.</h3>
-<h3>― David Goggins</h3>
-
-<br />
-
-<h3>Tell yourself the truth!</h3>
-<h3>That you’ve wasted enough time,</h3>
-<h3>and that you have other dreams that will take courage to realize,</h3>
-<h3>so you don’t die a fucking pussy.</h3>
-<h3>― David Goggins</h3>
-
-<br />
-
-<h3>This is the real secret of life --</h3>
-<h3>to be completely engaged with what you are doing in the here and now.</h3>
-<h3>And instead of calling it work,</h3>
-<h3>realize it is play.</h3>
-<h3>― Alan Watts</h3>
-
-<br />
-
-<h3>No amount of anxiety makes any difference to anything that is going to happen.</h3>
-<h3>― Alan Watts</h3>
-
-<br />
-
-<h3>Stop measuring days by degree of productivity</h3>
-<h3>and start experiencing them by degree of presence.</h3>
-<h3>― Alan Watts</h3>
-
-<br />
-
-<h3>The future is a concept,</h3>
-<h3>it doesn't exist.</h3>
-<h3>There is no such thing as tomorrow.</h3>
-<h3>There never will be, because time is always now.</h3>
-<h3>That's one of the things we discover when we stop talking to ourselves and stop thinking.</h3>
-<h3>We find there is only present, only an eternal now.</h3>
-<h3>― Alan Watts</h3>
-
-<br />
-
-<h3>You are the universe experiencing itself.</h3>
-<h3>― Alan Watts</h3>
-
-<br />
-
-<h3>Real religion is the transformation of anxiety into laughter.</h3>
-<h3>― Alan Watts</h3>
-
-<br />
-
-<h3>All that you see out in front of you is how you feel inside your head.</h3>
-<h3>― Alan Watts</h3>
-
-<br />
-
-<h3>Weak people revenge.</h3>
-<h3>Strong people forgive.</h3>
-<h3>Intelligent People Ignore.</h3>
-<h3>― Albert Einstein</h3>
-
-<br />
-
-<h3>The world will not be destroyed by those who do evil,</h3>
-<h3>but by those who watch them without doing anything.</h3>
-<h3>― Albert Einstein</h3>
-
-<br />
-
-<h3>Don't listen to the person who has the answers;</h3>
-<h3>listen to the person who has the questions.</h3>
-<h3>― Albert Einstein</h3>
-
-<br />
-
-<h3>Logic can take you from point A to point B.</h3>
-<h3>Imagination can take you wherever you want.</h3>
-<h3>― Albert Einstein</h3>
-
-<br />
-
-<h3>Failure is success in progress.</h3>
-<h3>― Albert Einstein</h3>
-
-<br />
-
-<h3>We cannot solve our problems</h3>
-<h3>with the same thinking we used when we created them.</h3>
-<h3>― Albert Einstein</h3>
+<h3>There Is No Thread.</h3>
+<h3>― Stephen Cleary</h3>
 
 <br />
