--- a/TradeMaster6000/Client/Pages/ZoneService.razor
+++ b/TradeMaster6000/Client/Pages/ZoneService.razor
@@ -27,6 +27,7 @@
                 <RadzenDataGridColumn Width="100px" TItem="Zone" Property="Bottom" Title="Bottom" />
                 <RadzenDataGridColumn Width="100px" TItem="Zone" Property="ZoneType" Title="Zone type" />
                 <RadzenDataGridColumn Width="100px" TItem="Zone" Property="Entry" Title="Is Entry?" />
+                <RadzenDataGridColumn Width="100px" TItem="Zone" Property="Tested" Title="Tested" />
                 <RadzenDataGridColumn Width="100px" TItem="Zone" Property="Timeframe" Title="Timeframe" />
                 <RadzenDataGridColumn Width="100px" TItem="Zone" Property="Tradeable" Title="Tradeable" />
                 <RadzenDataGridColumn Width="200px" TItem="Zone" Property="From" Title="From" />
