--- a/TradeMaster6000/Client/wwwroot/css/app.css
+++ b/TradeMaster6000/Client/wwwroot/css/app.css
@@ -16,7 +16,7 @@ html, body {
 }
 
 a, .btn-link {
-    color: #0366d6;
+    color: white;
 }
 
 .login-container {
@@ -41,7 +41,7 @@ a, .btn-link {
         }
 
 .btn-primary {
-    color: #fff;
+    color: white;
     background-color: #1b6ec2;
     border-color: #1861ac;
 }
