--- a/TradeMaster6000/Server/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/TradeMaster6000/Server/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@*@page
 @model ExternalLoginModel
 @{
     ViewData["Title"] = "Register";
@@ -30,4 +30,4 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-}
+}*@
