--- a/TradeMaster6000/Server/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/TradeMaster6000/Server/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@*@page
 @model ForgotPasswordConfirmation
 @{
     ViewData["Title"] = "Forgot password confirmation";
@@ -7,5 +7,5 @@
 <h1>@ViewData["Title"]</h1>
 <p>
     Please check your email to reset your password.
-</p>
+</p>*@
 
