--- a/TradeMaster6000/Server/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/TradeMaster6000/Server/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -37,19 +37,19 @@
             <button type="submit" class="btn btn-default">Forget this browser</button>
         </form>
     }
-    <a asp-page="./Disable2fa" class="btn btn-default">Disable 2FA</a>
-    <a asp-page="./GenerateRecoveryCodes" class="btn btn-default">Reset recovery codes</a>
+    <a style="color:white; text-decoration:underline;" asp-page="./Disable2fa" class="btn btn-default">Disable 2FA</a>
+    <a style="color: white; text-decoration: underline;" asp-page="./GenerateRecoveryCodes" class="btn btn-default">Reset recovery codes</a>
 }
 
 <h5>Authenticator app</h5>
 @if (!Model.HasAuthenticator)
 {
-    <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-default">Add authenticator app</a>
+    <a style="color: white; text-decoration: underline;" id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-default">Add authenticator app</a>
 }
 else
 {
-    <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-default">Setup authenticator app</a>
-    <a id="reset-authenticator" asp-page="./ResetAuthenticator" class="btn btn-default">Reset authenticator app</a>
+    <a style="color: white; text-decoration: underline;" id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-default">Setup authenticator app</a>
+    <a style="color: white; text-decoration: underline;" id="reset-authenticator" asp-page="./ResetAuthenticator" class="btn btn-default">Reset authenticator app</a>
 }
 
 @section Scripts {
