--- a/TradeMaster6000/Server/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/TradeMaster6000/Server/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@*@page
 @model ResetPasswordModel
 @{
     ViewData["Title"] = "Reset password";
@@ -34,4 +34,4 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-}
+}*@
