--- a/TradeMaster6000/Server/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/TradeMaster6000/Server/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@*@page
 @model ResetPasswordConfirmationModel
 @{
     ViewData["Title"] = "Reset password confirmation";
@@ -7,4 +7,4 @@
 <h1>@ViewData["Title"]</h1>
 <p>
     Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
-</p>
+</p>*@
