multiple fucking users bitch

--- a/TradeMaster6000/Client/Pages/Orders.razor
+++ b/TradeMaster6000/Client/Pages/Orders.razor
@@ -7,7 +7,7 @@
 @inject NavigationManager NavigationManager
 @inject ILogger<Orders> Logger
 @implements IAsyncDisposable
-@attribute [Authorize]
+@attribute [Authorize(Roles = "Follower")]
 
 @{
 
