--- a/TradeMaster6000/Client/Shared/ApiLoginDisplay.razor
+++ b/TradeMaster6000/Client/Shared/ApiLoginDisplay.razor
@@ -8,12 +8,12 @@
 }
 
 @code{
-    
 
-    protected override async Task OnInitializedAsync()
-    {
-        
-    }
+
+    //protected override async Task OnInitializedAsync()
+    //{
+
+    //}
 
 
 
