--- a/TradeMaster6000/Server/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/TradeMaster6000/Server/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -5,5 +5,6 @@
 <ul class="nav nav-pills flex-column">
     <li class="nav-item"><a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="profile" asp-page="./Index">Profile</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">Password</a></li>
+    <li class="nav-item"><a class="nav-link @ManageNavPages.UpdateApiSecretsNavClass(ViewContext)" id="update-secrets" asp-page="./UpdateApiSecrets">Update Api Secrets</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li>
 </ul>
